<resources>
    <string name="empty_string" translatable="false" />
    <string name="app_name">Marvel App</string>

    <string name="not_available">N/A</string>

    <!--Actions-->
    <string name="action_retry">Retry</string>

    <string name="empty_comics_list">No comics available</string>
    <string name="empty_events_list">No events available</string>
    <string name="empty_stories_list">No stories available</string>
    <string name="empty_series_list">No series available</string>

    <string name="title_comics_list">Comics</string>
    <string name="title_events_list">Events</string>
    <string name="title_stories_list">Stories</string>
    <string name="title_series_list">Series</string>

    <string name="character_id_title">ID: %1$d</string>

    <string name="items_count_label">%1$s: %2$d</string>

    <!--Errors-->
    <string name="error_characters_load_failed">An error occurred. Please try again.</string>


</resources>