<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgCharacter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:contentDescription="@null"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                tools:text="ID: 12345"
                style="@style/Text.H3"
                android:id="@+id/tvCharacterId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/spacing_small"
                app:layout_constraintTop_toBottomOf="@id/imgCharacter"/>

            <TextView
                tools:text="Name"
                style="@style/Text.H3.Bold"
                android:id="@+id/tvCharacterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/spacing_tiny"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterId"/>

            <!-- Comics Section -->
            <com.monir.marvelapp.ui.customwidgets.DetailsSectionView
                android:id="@+id/sectionComics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:emptyString="@string/empty_comics_list"
                app:sectionTitle="@string/title_comics_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCharacterName"/>

            <!-- Events Section -->
            <com.monir.marvelapp.ui.customwidgets.DetailsSectionView
                android:id="@+id/sectionEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:emptyString="@string/empty_events_list"
                app:sectionTitle="@string/title_events_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sectionComics"/>

            <!-- Stories Section -->
            <com.monir.marvelapp.ui.customwidgets.DetailsSectionView
                android:id="@+id/sectionStories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:emptyString="@string/empty_stories_list"
                app:sectionTitle="@string/title_stories_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sectionEvents"/>

            <!-- Series Section -->
            <com.monir.marvelapp.ui.customwidgets.DetailsSectionView
                android:id="@+id/sectionSeries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:emptyString="@string/empty_series_list"
                app:sectionTitle="@string/title_series_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sectionStories"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
